# wiki-backend

./: .dockerignore  .gitignore  Dockerfile  concept_permissions.md  docker-compose.yml  entity_agenttool.md  entity_bashtool.md  mkdocs.yml  synthesis_composition.md
backend/: .env.example  AGENTS.md  README.md  agent.py  generate_secret.py  git_workflow.py  main.py  otel-collector-config.yaml  proposals.py  pyproject.toml  search_tools.py  security.py  test_agent.py  test_git_workflow.py  test_integration.py  test_observability.py  test_proposals.py  test_search_integration.py  test_search_tools.py  verify_system_end_to_end.py
backend/context_engine/: README.md  __init__.py  budget.py  compactor.py  engine.py
backend/memory/: README.md  __init__.py  base.py  sqlite_memory.py
backend/observability/: __init__.py  config.py  metrics.py  tokens.py  trace_store.py  tracing.py
backend/search/: README.md  __init__.py  cache.py  chunker.py  embedding_cache.py  indexer.py  lexical.py  meilisearch_client.py  orchestrator.py  registry.py  reranker.py  semantic.py  strategy.py  symbols.py  test_chunker.py  test_lexical.py  test_orchestrator.py  test_registry.py  test_semantic.py  test_symbols.py
backend/tests/: conftest.py  test_code_location.py  test_compactor.py  test_context_engine.py  test_embedding_cache.py  test_integration_suite.py  test_meilisearch.py  test_memory.py  test_observability_validation.py  test_performance_accuracy.py  test_reranker.py  test_search_cache.py  test_search_validation.py  test_settings.py  test_system_validation.py  test_token_budget.py  (+1 more)
(+263 files in other folders)
