[project]
name = "mkdocs-ai-backend"
version = "0.1.0"
description = "Agentic backend for MkDocs Chatbox Widget"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "langchain",
    "langchain-openai",
    "litellm",
    "langgraph",
    "pyotp",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "meilisearch>=0.40.0",
    "chromadb>=0.5.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
